@@ -20,6 +20,7 @@ package org.apache.solr.util.circuitbreaker;
 import java.lang.invoke.MethodHandles;
 import java.lang.management.ManagementFactory;
 import java.lang.management.OperatingSystemMXBean;
+import java.util.Locale;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -95,5 +96,15 @@ public class LoadAverageCircuitBreaker extends CircuitBreaker {
 
   protected double calculateLiveLoadAverage() {
     return operatingSystemMXBean.getSystemLoadAverage();
+  }
+
+  @Override
+  public String toString() {
+    return String.format(
+        Locale.ROOT,
+        "%s(threshold=%f, warnOnly=%b)",
+        getClass().getSimpleName(),
+        loadAverageThreshold,
+        isWarnOnly());
   }
 }
