@@ -21,6 +21,7 @@ import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.lang.management.ManagementFactory;
 import java.lang.management.MemoryMXBean;
+import java.util.Locale;
 import org.apache.solr.util.RefCounted;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -130,5 +131,15 @@ public class MemoryCircuitBreaker extends CircuitBreaker {
         averagingMetricProvider.decref();
       }
     }
+  }
+
+  @Override
+  public String toString() {
+    return String.format(
+        Locale.ROOT,
+        "%s(threshold=%d, warnOnly=%b)",
+        getClass().getSimpleName(),
+        heapMemoryThreshold,
+        isWarnOnly());
   }
 }
