@@ -22,11 +22,16 @@ import static org.hamcrest.CoreMatchers.containsString;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
+import java.util.Properties;
+import java.util.Set;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Future;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
 import org.apache.solr.SolrTestCaseJ4;
+import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.params.CommonParams;
 import org.apache.solr.common.util.ExecutorUtil;
@@ -96,6 +101,73 @@ public abstract class BaseTestCircuitBreaker extends SolrTestCaseJ4 {
         () -> {
           h.query(req("name:\"john smith\""));
         });
+  }
+
+  public void testCBsCanBeMarkedAsWarnOnly() throws Exception {
+    removeAllExistingCircuitBreakers();
+
+    final var warnCircuitBreaker = new MockCircuitBreaker(true);
+    CircuitBreakerRegistry.registerGlobal(warnCircuitBreaker);
+
+    // CB is warnOnly=false by default, so error is thrown.
+    expectThrows(
+        SolrException.class,
+        () -> {
+          h.query(req("name:\"john smith\""));
+        });
+
+    // When warnOnly=true is set, CB will trip but requests will not fail
+    warnCircuitBreaker.setWarnOnly(true);
+    final var tripList =
+        h.getCore().getCircuitBreakerRegistry().checkTripped(SolrRequest.SolrRequestType.QUERY);
+    assertEquals(1, tripList.size());
+    assertEquals(warnCircuitBreaker, tripList.get(0));
+    h.query(req("name:\"john smith\""));
+  }
+
+  public void testGlobalCBsCanBeParsedFromSystemProperties() {
+    final var props = new Properties();
+    props.setProperty("solr.circuitbreaker.query.mem", "12");
+    props.setProperty("solr.circuitbreaker.update.loadavg", "3.4");
+    props.setProperty("solr.circuitbreaker.update.cpu", "56");
+    // Ensure 'warnOnly' property is picked up.
+    props.setProperty("solr.circuitbreaker.update.cpu.warnonly", "true");
+    System.setProperties(props);
+
+    try {
+      final var parsedBreakers =
+          CircuitBreakerRegistry.parseCircuitBreakersFromProperties(h.getCoreContainer()).stream()
+              .sorted(Comparator.comparing(breaker -> breaker.toString()))
+              .collect(Collectors.toList());
+
+      assertEquals(3, parsedBreakers.size());
+
+      assertTrue(
+          "Expected CPUCircuitBreaker, but got " + parsedBreakers.get(0).getClass().getName(),
+          parsedBreakers.get(0) instanceof CPUCircuitBreaker);
+      final var cpuBreaker = (CPUCircuitBreaker) parsedBreakers.get(0);
+      assertEquals(56.0, cpuBreaker.getCpuUsageThreshold(), 0.1);
+      assertEquals(true, cpuBreaker.isWarnOnly());
+      assertEquals(Set.of(SolrRequest.SolrRequestType.UPDATE), cpuBreaker.getRequestTypes());
+
+      assertTrue(
+          "Expected LoadAverageCircuitBreaker, but got "
+              + parsedBreakers.get(1).getClass().getName(),
+          parsedBreakers.get(1) instanceof LoadAverageCircuitBreaker);
+      final var loadAvgBreaker = (LoadAverageCircuitBreaker) parsedBreakers.get(1);
+      assertEquals(3.4, loadAvgBreaker.getLoadAverageThreshold(), 0.1);
+      assertEquals(false, loadAvgBreaker.isWarnOnly());
+      assertEquals(Set.of(SolrRequest.SolrRequestType.UPDATE), loadAvgBreaker.getRequestTypes());
+
+      assertTrue(
+          "Expected MemoryCircuitBreaker, but got " + parsedBreakers.get(2).getClass().getName(),
+          parsedBreakers.get(2) instanceof MemoryCircuitBreaker);
+      final var memBreaker = (MemoryCircuitBreaker) parsedBreakers.get(2);
+      assertEquals(false, memBreaker.isWarnOnly());
+      assertEquals(Set.of(SolrRequest.SolrRequestType.QUERY), memBreaker.getRequestTypes());
+    } finally {
+      props.keySet().stream().forEach(k -> System.clearProperty((String) k));
+    }
   }
 
   public void testCBFakeMemoryPressure() throws Exception {
